--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
+    "nodemon": "^3.1.9",
     "ws": "^8.18.0"
   }
 }
